--- a/latitudePolar/latitudePolar.vcxproj
+++ b/latitudePolar/latitudePolar.vcxproj
@@ -99,7 +99,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)CommonFunctions/lib/</AdditionalLibraryDirectories>
-      <AdditionalDependencies>$(CoreLibraryDependencies);CF.lib</AdditionalDependencies>
+      <AdditionalDependencies>$(CoreLibraryDependencies);CF_d.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -135,7 +135,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)CommonFunctions/lib/</AdditionalLibraryDirectories>
-      <AdditionalDependencies>$(CoreLibraryDependencies);CF.lib</AdditionalDependencies>
+      <AdditionalDependencies>$(CoreLibraryDependencies);CF_d.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
